Bot check Bypass

--- a/Midjourney.ipynb
+++ b/Midjourney.ipynb
@@ -2,19 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: user_agent in c:\\users\\shash\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.1.10)\n",
+      "Requirement already satisfied: six in c:\\users\\shash\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from user_agent) (1.16.0)\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install selenium\n",
     "# !pip install selenium chromedriver-autoinstaller\n",
     "# !pip install webdriver-manager\n",
-    "# !pip install undetected-chromedriver"
+    "# !pip install undetected-chromedriver\n",
+    "# !pip install scikit-image\n",
+    "#!pip install user_agent\n",
+    "#!pip install pyautogui"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +51,7 @@
     "from PIL import Image\n",
     "from io import BytesIO\n",
     "import os\n",
-    "import io\n",
+    "import random\n",
     "import shutil\n",
     "\n",
     "import pandas as pd\n",
@@ -47,12 +59,14 @@
     "import requests\n",
     "\n",
     "from time import sleep\n",
-    "import time"
+    "import time\n",
+    "import user_agent\n",
+    "import pyautogui"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,22 +74,40 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from selenium.webdriver.common.keys import Keys\n",
     "import time\n",
+    "import os\n",
     "\n",
+    "# Get the current working directory\n",
+    "current_dir = os.getcwd()\n",
+    "# Define download directory within the Midjourney folder\n",
+    "download_dir = os.path.join(current_dir, 'Midjourney')\n",
+    "if not os.path.exists(download_dir):\n",
+    "    os.makedirs(download_dir)\n",
+    "    \n",
+    "# Define Chrome options and experimental preferences\n",
     "options = uc.ChromeOptions()\n",
-    "# Configure options as needed\n",
-    "# options.add_argument('--headless')  # Optional, if you don't want a GUI.\n",
+    "\n",
     "options.add_argument('--no-sandbox')\n",
     "options.add_argument('--disable-dev-shm-usage')\n",
+    "options.add_argument('--disable-blink-features=AutomationControlled')\n",
     "options.add_argument(\"--disable-blink-features=AutomationControlled\")\n",
+    "options.add_argument(f\"user-agent={user_agent.generate_user_agent()}\")\n",
+    "prefs = {\n",
+    "    \"profile.default_content_settings.popups\": 0,\n",
+    "    \"profile.content_settings.pattern_pairs.*.multiple-automatic-downloads\": 1,\n",
+    "    \"download.prompt_for_download\": False,\n",
+    "    \"download.default_directory\": download_dir\n",
+    "}\n",
+    "options.add_experimental_option(\"prefs\",prefs)\n",
+    "# Initialize undetected Chrome driver with the configured options\n",
     "driver = uc.Chrome(options=options)\n",
+    "\n",
     "driver.get(\"https://discord.com/login\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +127,48 @@
      "text": [
       "Image Tweet_1.png saved successfully\n",
       "Image Tweet_2.png saved successfully\n",
-      "Image Tweet_3.png saved successfully\n"
+      "Image Tweet_3.png saved successfully\n",
+      "Image Tweet_4.png saved successfully\n",
+      "Image Tweet_5.png saved successfully\n",
+      "Image Tweet_6.png saved successfully\n",
+      "Image Tweet_7.png saved successfully\n",
+      "Image Tweet_8.png saved successfully\n",
+      "Image Tweet_9.png saved successfully\n",
+      "Image Tweet_10.png saved successfully\n",
+      "Image Tweet_11.png saved successfully\n",
+      "Image Tweet_12.png saved successfully\n",
+      "Image Tweet_13.png saved successfully\n",
+      "Image Tweet_14.png saved successfully\n",
+      "Image Tweet_15.png saved successfully\n",
+      "Image Tweet_16.png saved successfully\n",
+      "Image Tweet_17.png saved successfully\n",
+      "Image Tweet_18.png saved successfully\n",
+      "Image Tweet_19.png saved successfully\n",
+      "Image Tweet_20.png saved successfully\n",
+      "Image Tweet_21.png saved successfully\n",
+      "Image Tweet_22.png saved successfully\n",
+      "Image Tweet_23.png saved successfully\n",
+      "Image Tweet_24.png saved successfully\n",
+      "Image Tweet_25.png saved successfully\n",
+      "Image Tweet_26.png saved successfully\n",
+      "Image Tweet_27.png saved successfully\n",
+      "Image Tweet_28.png saved successfully\n",
+      "Image Tweet_29.png saved successfully\n",
+      "Image Tweet_30.png saved successfully\n",
+      "Image Tweet_31.png saved successfully\n",
+      "Image Tweet_32.png saved successfully\n",
+      "Image Tweet_33.png saved successfully\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 49\u001b[0m\n\u001b[0;32m     46\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mmoveTo(x, y, duration\u001b[38;5;241m=\u001b[39mrandom\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# Wait for image generation to complete with random sleep time\u001b[39;00m\n\u001b[1;32m---> 49\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muniform\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m60\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m75\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     51\u001b[0m prefs \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     52\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprofile.default_content_settings.popups\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m     53\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprofile.content_settings.pattern_pairs.*.multiple-automatic-downloads\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m     54\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownload.prompt_for_download\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     55\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdownload.default_directory\u001b[39m\u001b[38;5;124m\"\u001b[39m: download_dir\n\u001b[0;32m     56\u001b[0m }\n\u001b[0;32m     57\u001b[0m options\u001b[38;5;241m.\u001b[39madd_experimental_option(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprefs\u001b[39m\u001b[38;5;124m\"\u001b[39m,prefs)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -103,26 +176,26 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium import webdriver\n",
     "import time\n",
     "import requests\n",
     "import os\n",
+    "import random\n",
     "\n",
-    "# Get the current working directory\n",
-    "current_dir = os.getcwd()\n",
-    "# Define the download directory within the Midjourney folder\n",
-    "download_dir = os.path.join(current_dir, 'Midjourney')\n",
-    "if not os.path.exists(download_dir):\n",
-    "    os.makedirs(download_dir)\n",
+    "# Create a set to store original filenames\n",
+    "original_names = set()\n",
+    "\n",
+    "# Initialize the last downloaded image's original name as None\n",
+    "last_downloaded_image_src = \"\"\n",
     "\n",
     "# Read prompts from prompts.txt file\n",
     "with open('prompts.txt', 'r') as file:\n",
     "    prompts = file.readlines()\n",
     "\n",
-    "# Initialize a counter for the image names\n",
-    "image_counter = 1\n",
-    "\n",
     "# Loop through each prompt and generate images\n",
-    "for prompt_text in prompts:\n",
+    "for prompt_number, prompt_text in enumerate(prompts, start=1):\n",
+    "    \n",
+    "\n",
     "    # Find the div element using its data-slate-node attribute\n",
     "    div_element = driver.find_element(By.CSS_SELECTOR, 'div[data-slate-node=\"element\"]')\n",
     "\n",
@@ -133,39 +206,74 @@
     "    time.sleep(1)\n",
     "\n",
     "    # Type \"/imagine\" and the prompt text together\n",
-    "    ActionChains(driver).send_keys(f\"/imagine {prompt_text.strip()}\").perform()\n",
+    "    full_command = f\"/imagine {prompt_text.strip()}\"\n",
+    "    ActionChains(driver).send_keys(full_command).perform()\n",
     "\n",
     "    # Press Enter to submit the command and prompt\n",
     "    ActionChains(driver).send_keys(Keys.RETURN).perform()\n",
+    "    \n",
+    "    # Get screen dimensions for random movement within the screen\n",
+    "    screen_width, screen_height = pyautogui.size()\n",
     "\n",
-    "    # Wait for image generation to complete (average time 1 minute)\n",
-    "    time.sleep(60)\n",
+    "    # Randomize mouse movement within the screen\n",
+    "    x = random.randint(0, screen_width)\n",
+    "    y = random.randint(0, screen_height)\n",
+    "    pyautogui.moveTo(x, y, duration=random.uniform(0.5, 1))\n",
+    "\n",
+    "    # Wait for image generation to complete with random sleep time\n",
+    "    time.sleep(random.uniform(60, 75))\n",
+    "\n",
+    "    prefs = {\n",
+    "    \"profile.default_content_settings.popups\": 0,\n",
+    "    \"profile.content_settings.pattern_pairs.*.multiple-automatic-downloads\": 1,\n",
+    "    \"download.prompt_for_download\": False,\n",
+    "    \"download.default_directory\": download_dir\n",
+    "    }\n",
+    "    options.add_experimental_option(\"prefs\",prefs)\n",
     "\n",
     "    # Find all div elements with the class \"loadingOverlay__35a04\"\n",
     "    div_elements = driver.find_elements(By.CSS_SELECTOR, 'div.loadingOverlay__35a04')\n",
     "\n",
     "    # Get the latest div element (assuming it's the last one in the list)\n",
-    "    latest_div_element = div_elements[-2]\n",
+    "    latest_div_element = div_elements[-1]\n",
+    "    \n",
+    "    time.sleep(random.uniform(1, 2))\n",
+    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", latest_div_element)\n",
     "\n",
     "    # Extract the image source URL from the img tag within the div element\n",
     "    image_src = latest_div_element.find_element(By.TAG_NAME, 'img').get_attribute('src')\n",
     "\n",
-    "    # Download the image using requests\n",
-    "    response = requests.get(image_src)\n",
-    "    if response.status_code == 200:\n",
-    "        # Save the image to a file with the Tweet number\n",
-    "        image_name = f\"Tweet_{image_counter}.png\"\n",
-    "        with open(os.path.join(download_dir, image_name), \"wb\") as f:\n",
-    "            f.write(response.content)\n",
-    "            print(f\"Image {image_name} saved successfully\")\n",
-    "            image_counter += 1\n",
+    "    # Check if the image source URL is the same as the last downloaded image's URL\n",
+    "    if image_src == last_downloaded_image_src:\n",
+    "        print(\"Image is the same as the last one downloaded. Skipping download.\")\n",
     "    else:\n",
-    "        print(\"Failed to download the image\")"
+    "        # Check if the filename already exists in the download directory\n",
+    "        image_name = f\"Tweet_{prompt_number}.png\"\n",
+    "        if image_name in os.listdir(download_dir):\n",
+    "            print(f\"Image {image_name} already exists in the folder. Skipping.\")\n",
+    "        else:\n",
+    "            # Download the image using requests\n",
+    "            response = requests.get(image_src)\n",
+    "            if response.status_code == 200:\n",
+    "                # Save the image to a file with the Tweet number\n",
+    "                with open(os.path.join(download_dir, image_name), \"wb\") as f:\n",
+    "                    f.write(response.content)\n",
+    "                    print(f\"Image {image_name} saved successfully\")\n",
+    "                    # Update the last downloaded image's source URL\n",
+    "                    last_downloaded_image_src = image_src\n",
+    "            else:\n",
+    "                print(\"Failed to download the image\")\n",
+    "\n",
+    "    # Wait for a random time delay\n",
+    "    time.sleep(random.uniform(1, 2))\n",
+    "\n",
+    "    # Scroll to the latest div element\n",
+    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", latest_div_element)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +282,11 @@
     "\n",
     "# Define the path to the Midjourney folder\n",
     "midjourney_dir = \"Midjourney\"  # Replace with the actual path to your Midjourney folder\n",
+    "\n",
+    "# Define the path to the FMid folder\n",
+    "fmid_dir = \"FMid\"  # Replace with the actual path to your FMid folder\n",
+    "if not os.path.exists(fmid_dir):\n",
+    "    os.makedirs(fmid_dir)\n",
     "\n",
     "# Loop through all files in the Midjourney folder\n",
     "for filename in os.listdir(midjourney_dir):\n",
@@ -192,74 +305,19 @@
     "        # Crop the top-left quarter\n",
     "        quarter_image = image.crop((0, 0, quarter_width, quarter_height))\n",
     "\n",
-    "        # Resize the cropped quarter to 50% of its original size\n",
-    "        resized_quarter = quarter_image.resize((quarter_width // 2, quarter_height // 2))\n",
+    "        # Resize the cropped quarter to four times its original size\n",
+    "        resized_quarter = quarter_image.resize((quarter_width * 2, quarter_height * 2))\n",
     "\n",
     "        # Define the new filename with the \"Tweet_\" prefix and appropriate extension\n",
-    "        new_filename = f\"Tweet_{filename.split('.')[0]}.png\"\n",
+    "        new_filename = f\"{filename.split('.')[0]}.png\"\n",
     "\n",
-    "        # Save the resized quarter image in the Midjourney folder\n",
-    "        resized_quarter.save(os.path.join(midjourney_dir, new_filename))\n",
-    "\n",
-    "        # Delete the original image file\n",
-    "        os.remove(image_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image\n",
-    "\n",
-    "# Open the downloaded image using PIL\n",
-    "img = Image.open(\"latest_image.png\")\n",
-    "img.show()  # Display the image\n"
+    "        # Save the resized quarter image in the FMid folder\n",
+    "        resized_quarter.save(os.path.join(fmid_dir, new_filename))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First quarter of the image saved successfully as 'first_quarter_image.png'\n"
-     ]
-    }
-   ],
-   "source": [
-    "from PIL import Image\n",
-    "\n",
-    "# Open the downloaded image using PIL\n",
-    "img = Image.open(\"latest_image.png\")\n",
-    "\n",
-    "# Get the size of the image\n",
-    "width, height = img.size\n",
-    "\n",
-    "# Calculate the coordinates for cropping the first quarter\n",
-    "left = 0\n",
-    "top = 0\n",
-    "right = width // 2\n",
-    "bottom = height // 2\n",
-    "\n",
-    "# Crop the image to the first quarter\n",
-    "cropped_img = img.crop((left, top, right, bottom))\n",
-    "\n",
-    "# Save the cropped image to a file\n",
-    "cropped_img.save(\"first_quarter_image.png\")\n",
-    "print(\"First quarter of the image saved successfully as 'first_quarter_image.png'\")\n",
-    "\n",
-    "# Display the cropped image\n",
-    "cropped_img.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
