--- a/Midjourney.ipynb
+++ b/Midjourney.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: user_agent in c:\\users\\shash\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.1.10)\n",
-      "Requirement already satisfied: six in c:\\users\\shash\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from user_agent) (1.16.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install selenium\n",
     "# !pip install selenium chromedriver-autoinstaller\n",
@@ -41,27 +32,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import selenium\n",
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
     "import pandas as pd\n",
     "from PIL import Image\n",
-    "from io import BytesIO\n",
     "import os\n",
     "import random\n",
     "import shutil\n",
-    "\n",
-    "import pandas as pd\n",
     "import re\n",
     "import requests\n",
-    "\n",
-    "from time import sleep\n",
     "import time\n",
-    "import user_agent\n",
-    "import pyautogui"
+    "from time import sleep\n",
+    "import pyautogui\n",
+    "import undetected_chromedriver as uc\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "from selenium.webdriver.common.keys import Keys"
    ]
   },
   {
@@ -70,13 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import undetected_chromedriver as uc\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "import time\n",
-    "import os\n",
-    "\n",
     "# Get the current working directory\n",
     "current_dir = os.getcwd()\n",
     "# Define download directory within the Midjourney folder\n",
@@ -90,7 +70,7 @@
     "options.add_argument('--no-sandbox')\n",
     "options.add_argument('--disable-dev-shm-usage')\n",
     "options.add_argument('--disable-blink-features=AutomationControlled')\n",
-    "options.add_argument(\"--disable-blink-features=AutomationControlled\")\n",
+    "options.add_argument(\"--disable-popup-blocking\")\n",
     "options.add_argument(f\"user-agent={user_agent.generate_user_agent()}\")\n",
     "prefs = {\n",
     "    \"profile.default_content_settings.popups\": 0,\n",
@@ -113,111 +93,127 @@
    "source": [
     "driver.maximize_window();\n",
     "driver.get(\"https://discord.com/channels/1155301271088152709/1155315618116022322\")\n",
-    "time.sleep(10)"
+    "# Open new tabs in the existing window with Bing Image Search for creating images\n",
+    "driver.execute_script(\"window.open('https://discord.com/channels/1155301271088152709/1238313223342653500', '_blank');\")\n",
+    "driver.execute_script(\"window.open('https://discord.com/channels/1155301271088152709/1238313259279585362', '_blank');\")\n",
+    "time.sleep(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image Tweet_1.png saved successfully\n",
+      "Image Tweet_2.png saved successfully\n",
+      "Image Tweet_3.png saved successfully\n",
+      "Image Tweet_4.png saved successfully\n",
+      "Image Tweet_5.png saved successfully\n",
+      "Image Tweet_6.png saved successfully\n",
+      "Image Tweet_7.png saved successfully\n",
+      "Image Tweet_8.png saved successfully\n",
+      "Image for prompt 5 not created (same as previous)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.common.action_chains import ActionChains\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "from selenium import webdriver\n",
-    "import time\n",
-    "import requests\n",
-    "import os\n",
-    "import random\n",
-    "\n",
-    "# Create a set to store original filenames\n",
-    "original_names = set()\n",
-    "\n",
-    "# Initialize the last downloaded image's original name as None\n",
-    "last_downloaded_image_src = \"\"\n",
-    "\n",
     "# Read prompts from prompts.txt file\n",
     "with open('prompts.txt', 'r') as file:\n",
     "    prompts = file.readlines()\n",
+    "    \n",
+    "# Get screen dimensions for random movement within the screen\n",
+    "screen_width, screen_height = pyautogui.size()\n",
     "\n",
+    "# Randomize mouse movement within the screen\n",
+    "x = random.randint(0, screen_width)\n",
+    "y = random.randint(0, screen_height)\n",
+    "\n",
+    "# Array to store the latest image source URLs for each tab\n",
+    "latest_image_urls = [\"\", \"\", \"\"]  # Initialize with empty strings for each tab\n",
+    "tweet_number = 1\n",
     "# Loop through each prompt and generate images\n",
     "for prompt_number, prompt_text in enumerate(prompts, start=1):\n",
-    "    \n",
+    "    # Loop to open new tabs and enter prompts\n",
+    "    for tab_index in range(len(driver.window_handles)):\n",
+    "        driver.switch_to.window(driver.window_handles[tab_index])\n",
+    "        \n",
+    "        pyautogui.moveTo(x, y, duration=random.uniform(0.5, 1))\n",
     "\n",
-    "    # Find the div element using its data-slate-node attribute\n",
-    "    div_element = driver.find_element(By.CSS_SELECTOR, 'div[data-slate-node=\"element\"]')\n",
+    "        # Find the div element using its data-slate-node attribute\n",
+    "        div_element = driver.find_element(By.CSS_SELECTOR, 'div[data-slate-node=\"element\"]')\n",
     "\n",
-    "    # Click on the div to focus on it\n",
-    "    ActionChains(driver).click(div_element).perform()\n",
+    "        # Click on the div to focus on it\n",
+    "        ActionChains(driver).click(div_element).perform()\n",
     "\n",
-    "    # Wait for a second to ensure the cursor is focused\n",
-    "    time.sleep(1)\n",
+    "        # Wait for a second to ensure the cursor is focused\n",
+    "        time.sleep(random.uniform(1, 2))\n",
     "\n",
-    "    # Type \"/imagine\" and the prompt text together\n",
-    "    full_command = f\"/imagine {prompt_text.strip()}\"\n",
-    "    ActionChains(driver).send_keys(full_command).perform()\n",
+    "        # Type the prompt text based on the prompt number\n",
+    "        ActionChains(driver).send_keys(\"/imagine \").perform()\n",
+    "        time.sleep(random.uniform(0.4, 0.6))\n",
+    "        ActionChains(driver).send_keys(prompts[(tweet_number + tab_index - 1) % len(prompts)].strip()).perform()\n",
     "\n",
-    "    # Press Enter to submit the command and prompt\n",
-    "    ActionChains(driver).send_keys(Keys.RETURN).perform()\n",
-    "    \n",
-    "    # Get screen dimensions for random movement within the screen\n",
-    "    screen_width, screen_height = pyautogui.size()\n",
+    "        # Press Enter to submit the command and prompt\n",
+    "        ActionChains(driver).send_keys(Keys.RETURN).perform()\n",
     "\n",
-    "    # Randomize mouse movement within the screen\n",
-    "    x = random.randint(0, screen_width)\n",
-    "    y = random.randint(0, screen_height)\n",
-    "    pyautogui.moveTo(x, y, duration=random.uniform(0.5, 1))\n",
+    "    # Loop to get image source URLs and download images\n",
+    "    for tab_index in range(len(driver.window_handles)):\n",
+    "        driver.switch_to.window(driver.window_handles[tab_index])\n",
+    "        \n",
+    "        if(tab_index == 0):\n",
+    "            time.sleep(random.uniform(50, 70))\n",
     "\n",
-    "    # Wait for image generation to complete with random sleep time\n",
-    "    time.sleep(random.uniform(60, 75))\n",
+    "        pyautogui.moveTo(x, y, duration=random.uniform(0.5, 1))\n",
     "\n",
-    "    prefs = {\n",
-    "    \"profile.default_content_settings.popups\": 0,\n",
-    "    \"profile.content_settings.pattern_pairs.*.multiple-automatic-downloads\": 1,\n",
-    "    \"download.prompt_for_download\": False,\n",
-    "    \"download.default_directory\": download_dir\n",
-    "    }\n",
-    "    options.add_experimental_option(\"prefs\",prefs)\n",
+    "        # Set download preferences\n",
+    "        prefs = {\n",
+    "            \"profile.default_content_settings.popups\": 0,\n",
+    "            \"profile.content_settings.pattern_pairs.*.multiple-automatic-downloads\": 1,\n",
+    "            \"download.prompt_for_download\": False,\n",
+    "            \"download.default_directory\": download_dir  # Use the specified download directory\n",
+    "        }\n",
+    "        options.add_experimental_option(\"prefs\", prefs)\n",
     "\n",
-    "    # Find all div elements with the class \"loadingOverlay__35a04\"\n",
-    "    div_elements = driver.find_elements(By.CSS_SELECTOR, 'div.loadingOverlay__35a04')\n",
+    "        # Get the latest div element\n",
+    "        latest_div_element = driver.find_elements(By.CSS_SELECTOR, 'div.loadingOverlay__35a04')[-1]\n",
     "\n",
-    "    # Get the latest div element (assuming it's the last one in the list)\n",
-    "    latest_div_element = div_elements[-1]\n",
-    "    \n",
-    "    time.sleep(random.uniform(1, 2))\n",
-    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", latest_div_element)\n",
+    "        # Extract the image source URL from the img tag within the div element\n",
+    "        image_src = latest_div_element.find_element(By.TAG_NAME, 'img').get_attribute('src')\n",
     "\n",
-    "    # Extract the image source URL from the img tag within the div element\n",
-    "    image_src = latest_div_element.find_element(By.TAG_NAME, 'img').get_attribute('src')\n",
-    "\n",
-    "    # Check if the image source URL is the same as the last downloaded image's URL\n",
-    "    if image_src == last_downloaded_image_src:\n",
-    "        print(\"Image is the same as the last one downloaded. Skipping download.\")\n",
-    "    else:\n",
-    "        # Check if the filename already exists in the download directory\n",
-    "        image_name = f\"Tweet_{prompt_number}.png\"\n",
-    "        if image_name in os.listdir(download_dir):\n",
-    "            print(f\"Image {image_name} already exists in the folder. Skipping.\")\n",
-    "        else:\n",
+    "        # Check if the image source URL is different from the latest for this tab\n",
+    "        if image_src != latest_image_urls[tab_index]:\n",
     "            # Download the image using requests\n",
     "            response = requests.get(image_src)\n",
     "            if response.status_code == 200:\n",
     "                # Save the image to a file with the Tweet number\n",
+    "                image_name = f\"Tweet_{tweet_number}.png\"\n",
+    "                \n",
     "                with open(os.path.join(download_dir, image_name), \"wb\") as f:\n",
     "                    f.write(response.content)\n",
     "                    print(f\"Image {image_name} saved successfully\")\n",
-    "                    # Update the last downloaded image's source URL\n",
-    "                    last_downloaded_image_src = image_src\n",
+    "                    # Update the latest image source URL for this tab\n",
+    "                    latest_image_urls[tab_index] = image_src\n",
     "            else:\n",
-    "                print(\"Failed to download the image\")\n",
-    "\n",
-    "    # Wait for a random time delay\n",
-    "    time.sleep(random.uniform(1, 2))\n",
-    "\n",
-    "    # Scroll to the latest div element\n",
-    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", latest_div_element)\n"
+    "                print(f\"Failed to download the image for prompt {tweet_number}\")\n",
+    "        else:\n",
+    "            print(f\"Image for prompt {tweet_number} not created (same as previous)\")\n",
+    "        prompt_number+=1\n",
+    "        tweet_number+= 1\n"
    ]
   },
   {
