--- a/Copilot.ipynb
+++ b/Copilot.ipynb
@@ -142,7 +142,7 @@
     "try:\n",
     "    # Use webdriver_manager to automatically download and manage ChromeDriver\n",
     "    driver_path = ChromeDriverManager().install()\n",
-    "    driver = uc.Chrome(options=options, driver_executable_path=driver_path)\n",
+    "    driver = uc.Chrome(options=options)\n",
     "    driver.get(\"https://www.bing.com/images/create?FORM=IRPGEN\")\n",
     "except WebDriverException as e:\n",
     "    print(f\"An error occurred while initializing the WebDriver: {e}\")\n"
@@ -189,7 +189,7 @@
     "    os.makedirs(download_dir)\n",
     "\n",
     "# Read prompts from prompts.txt file\n",
-    "with open('prompts_new.txt', 'r') as file:\n",
+    "with open('prompts.txt', 'r') as file:\n",
     "    prompts = file.readlines()\n",
     "    num_prompts = len(prompts)\n",
     "    \n",
